kubernetes/main/infrastructure/longhorn/longhorn/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app longhorn
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames:
    - longhorn.internal.denniseffing.de
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: longhorn-frontend
          namespace: longhorn
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
